# MemoryLane

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  MemoryLane_Project_Document.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: on-main.yml  on-pr.yml
docs/: agents.md  architecture.md  evals.md
docs/adr/: 001-template.md  002-vector-db-pgvector.md  003-langgraph-over-crewai.md
infra/db/: init.sql
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/.terraform/modules/: modules.json
infra/terraform/environments/dev/: terraform.tfvars
infra/terraform/modules/cognito/: main.tf  outputs.tf
infra/terraform/modules/ecr/: main.tf
infra/terraform/modules/eks/: main.tf
infra/terraform/modules/rds/: main.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf
infra/terraform/modules/vpc/: main.tf
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: config.py  main.py
services/api-gateway/tests/: conftest.py  test_main.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: config.py  main.py  models.py  tasks.py
services/ingestion/app/routers/: oauth.py  sync.py
services/ingestion/app/services/: google_photos.py  redis_state.py  s3.py
services/ingestion/tests/: conftest.py  test_oauth.py  test_sync.py
services/workers/: Dockerfile  pyproject.toml
services/workers/app/: clip_model.py  config.py  db.py  models.py  tasks.py  worker.py
services/workers/tests/: conftest.py  test_enrich.py
