[project]
name = "memorylane"
version = "0.1.0"
description = "Agentic AI Photo Library Organizer"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jenit Jain" }]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services/*/app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["services/*/tests", "evals"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
