[project]
name = "memorylane-workers"
version = "0.1.0"
description = "MemoryLane Enrichment Workers - CLIP embedding and photo processing"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "Pillow>=11.0.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.7.0",
    "open-clip-torch>=2.26.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
